--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -17,6 +17,7 @@
     "react-apexcharts": "^1.3.9",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
