--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -18,9 +18,11 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
+    "redux": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
